@startuml
title CEF Class Diagram

abstract CommandBase
abstract DebugPortDriver

class AppMain << Singleton >>
class Logging << Singleton >>
class BspHwShim<< Singleton >>
class CommandDebugPortRouter << Singleton >>
class CommandGenerator << Singleton >>
class LinuxSPDriver << (M, Tomato) >> #pink
class LinuxOS << (M, Tomato) >> #pink
class HalSPDriver << (M, Tomato) >> #aqua
class BSP << (M, Tomato) >> #aqua

class AppMain {
+ ForeverLoop
}

class CommandDebugPortRouter {
+ Init
}

class DebugPortTransportLayer {
+ Init
}

LinuxOS *-- AppMain
BSP *-- AppMain


AppMain::Forever *-- CommandExecutor


CommandGenerator *-- CommandBase
CommandBase <|-- Commands

CommandCefCommandProxy -[dashed]-> CommandGenerator : uses 
CommandCefCommandProxy -[dashed]-> CommandExecutor: uses


CommandCefCommandProxy *-- CommandDebugPortRouter
Logging *-- CommandDebugPortRouter
CommandDebugPortRouter::Init --> DebugPortTransportLayer : creates
CommandDebugPortRouter *-- DebugPortTransportLayer
DebugPortTransportLayer::Init --> DebugPortDriver : creates
DebugPortTransportLayer *-- DebugPortDriver

DebugPortDriver <|-- SerialPortDriverSimImpl
SerialPortDriverSimImpl *-- LinuxSPDriver
DebugPortDriver <|-- SerialPortDriverHwImpl
SerialPortDriverHwImpl*-- BspHwShim
BspHwShim*-- HalSPDriver
@enduml